feature: iam creation

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 *.tfstate
 *.tfstate.*
 
+
 # Crash log files
 crash.log
 
@@ -16,10 +17,12 @@ crash.log
 
 # Ignore override files as they are usually used to override resources locally and so
 # are not checked in
+.terraform.lock.hcl
 override.tf
 override.tf.json
 *_override.tf
 *_override.tf.json
+providers.tf
 
 # Include override files you do wish to add to version control using negated pattern
 #
